--- a/TREM.Electron/Localization/dict/zh-CN.json
+++ b/TREM.Electron/Localization/dict/zh-CN.json
@@ -1,14 +1,14 @@
 {
-    "Application_Connecting": "连线中...",
+    "Application_Connecting": "连接中...",
     "Application_Loading": "载入中...",
     "Application_Title": "TREM 台湾即时地震监测",
     "Application_Welcome": "欢迎",
     "Audio_Test": "测试音效",
     "Audio_TestStop": "停止测试",
-    "Setting_Dialog_Error_Title": "设置档案错误",
-    "Setting_Dialog_Error_Description": "无法读取设置档，这可能是你在编辑时不小心删除了一些重要的符号，像是逗号、冒号或是引号，或是设置档案损坏。\n\n错误：{0}",
+    "Setting_Dialog_Error_Title": "设置文件错误",
+    "Setting_Dialog_Error_Description": "无法读取设置文件，这可能是因为你在编辑时不小心删除了一些重要的符号，像是逗号、冒号或是引号，或是设置文件损坏。\n\n错误：{0}",
     "Setting_Dialog_Reset_Title": "重置设置？",
-    "Setting_Dialog_Reset_Description": "您确定要重置所有的设置吗\n这个动作是无法回复的",
+    "Setting_Dialog_Reset_Description": "您确定要重置所有的设置吗\n这个操作是无法恢复的",
     "Setting_Title": "TREM | 设置",
     "Setting_Update_Latest": "目前版本是最新的",
     "Webhook_Dialog_Error_Title": "Webhook 错误",
@@ -25,7 +25,7 @@
     "Dialog_Button_OK": "OK",
     "Notification_Update_Title": ":arrow_up: 有可用的更新",
     "Notification_Update_Body": "v{0} → v{1}\n单击下载最新版本",
-    "Realtime_No_Data": "无资料",
+    "Realtime_No_Data": "无数据",
     "Intensity_Zero": null,
     "Intensity_One": null,
     "Intensity_Two": null,
