--- a/TREM.Electron/Localization/dict/kr.json
+++ b/TREM.Electron/Localization/dict/kr.json
@@ -5,6 +5,8 @@
     "Application_Welcome": "환영합니다",
     "Audio_Test": "소리 테스트",
     "Audio_TestStop": "정지",
+    "Initialization_No_Connection_Title": null,
+    "Initialization_No_Connection_Description": null,
     "Setting_Dialog_Error_Title": "해석 오류",
     "Setting_Dialog_Error_Description": "설정 파일을 해석하지 못했습니다. 편집 중에 중요한 기호를 잘못 삭제하거나 설정 파일이 파손되었을 수 있습니다.\n\n오류:{0}",
     "Setting_Dialog_Reset_Title": "설정을 초기화할까요?",
