--- a/TREM.Electron/Localization/dict/zh-CN.json
+++ b/TREM.Electron/Localization/dict/zh-CN.json
@@ -5,6 +5,8 @@
     "Application_Welcome": "欢迎",
     "Audio_Test": "测试音效",
     "Audio_TestStop": "停止测试",
+    "Initialization_No_Connection_Title": null,
+    "Initialization_No_Connection_Description": null,
     "Setting_Dialog_Error_Title": "设置文件错误",
     "Setting_Dialog_Error_Description": "无法读取设置文件，这可能是因为你在编辑时不小心删除了一些重要的符号，像是逗号、冒号或是引号，或是设置文件损坏。\n\n错误：{0}",
     "Setting_Dialog_Reset_Title": "重置设置？",
