--- a/TREM.Electron/Localization/dict/en.json
+++ b/TREM.Electron/Localization/dict/en.json
@@ -45,6 +45,7 @@
     "Setting_Open": "Open Settings",
     "general_locale": "Display Language",
     "check_For_Updates": "check For Updates",
+    "open_Devtool_F10": null,
     "Notification_No_Update_Title": "No Update Available",
     "Notification_No_Update_Body": "Now v{0}\nNew v{1}",
     "Tray_Reload": "Reload TREM"
