--- a/TREM.Electron/Localization/dict/kr.json
+++ b/TREM.Electron/Localization/dict/kr.json
@@ -45,6 +45,7 @@
     "Setting_Open": "설정 열기",
     "general_locale": "표시 언어",
     "check_For_Updates": null,
+    "open_Devtool_F10": null,
     "Notification_No_Update_Title": null,
     "Notification_No_Update_Body": null,
     "Tray_Reload": null
