--- a/TREM.Electron/Localization/dict/zh-CN.json
+++ b/TREM.Electron/Localization/dict/zh-CN.json
@@ -45,6 +45,7 @@
     "Setting_Open": "开启设置",
     "general_locale": "显示语言",
     "check_For_Updates": "检查更新",
+    "open_Devtool_F10": null,
     "Notification_No_Update_Title": "没有可用的更新",
     "Notification_No_Update_Body": "当前v{0}\n最新v{1}",
     "Tray_Reload": "重新加载"
