--- a/TREM.Electron/Localization/dict/en.json
+++ b/TREM.Electron/Localization/dict/en.json
@@ -1,17 +1,17 @@
 {
     "Application_Connecting": "Connecting to the server",
     "Application_Loading": "Loading",
-    "Application_Title": "Taiwan Real-time Earthquake Monitoring",
+    "Application_Title": "Taiwan Real-time Earthquake Monitoring Variety",
     "Application_Welcome": "Welcome",
     "Audio_Test": "Test",
     "Audio_TestStop": "Stop",
     "Initialization_No_Connection_Title": "No Internet Connection",
-    "Initialization_No_Connection_Description": "TREM is designed to be used with an internet connection.\nPplease check your internet settings and try again.",
+    "Initialization_No_Connection_Description": "TREMV is designed to be used with an internet connection.\nPplease check your internet settings and try again.",
     "Setting_Dialog_Error_Title": "Parse Error",
     "Setting_Dialog_Error_Description": "Cannot parse the config file, this may be that you have accidentally deleted some important symbols such as commas, colons or quotation marks while editing, or the configuration file may have corrupted.\n\nError: {0}",
     "Setting_Dialog_Reset_Title": "Reset Settings?",
     "Setting_Dialog_Reset_Description": "Are you sure that you really want to reset all settings?\nThis action is irreversible.",
-    "Setting_Title": "TREM | Settings",
+    "Setting_Title": "TREMV | Settings",
     "Setting_Update_Latest": "No updates available.",
     "Webhook_Dialog_Error_Title": "Webhook Error",
     "Webhook_Dialog_Error_Empty": "A valid webhook URL is needed to send a test message.",
@@ -20,7 +20,7 @@
     "Webhook_Dialog_Success": "Test message successfully sent.\nMessage ID：{0}\nChannel ID：{1}",
     "Tray_Show": "Show Window",
     "Tray_Hide": "Hide Window",
-    "Tray_Restart": "Restart TREM",
+    "Tray_Restart": "Restart TREMV",
     "Tray_Exit": "Force Quit",
     "Dialog_Button_Confirm": "Confirm",
     "Dialog_Button_Cancel": "Cancel",
@@ -38,7 +38,7 @@
     "Intensity_Six_Weak": "6-",
     "Intensity_Six_Strong": "6+",
     "Intensity_Seven": "7",
-    "Report_Title_Local": "TREM manual positioning",
+    "Report_Title_Local": "TREMV manual positioning",
     "Report_Title_Small": "Small-felt-area Earthquake",
     "Report_Intensity_Title": "Max Int.",
     "Setting": "Settings",
@@ -48,5 +48,5 @@
     "open_Devtool_F10": null,
     "Notification_No_Update_Title": "No Update Available",
     "Notification_No_Update_Body": "Now v{0}\nNew v{1}",
-    "Tray_Reload": "Reload TREM"
+    "Tray_Reload": "Reload TREMV"
 }
