--- a/TREM.Electron/Localization/dict/ja.json
+++ b/TREM.Electron/Localization/dict/ja.json
@@ -1,7 +1,7 @@
 {
     "Application_Connecting": "サーバ接続中...",
     "Application_Loading": "ローディング中...",
-    "Application_Title": "TREM 台湾リアルタイム地震モニタリング",
+    "Application_Title": "TREM 台湾リアルタイム地震監視バリエーション",
     "Application_Welcome": "ようこそ",
     "Audio_Test": "音テスト",
     "Audio_TestStop": "停止",
@@ -11,7 +11,7 @@
     "Setting_Dialog_Error_Description": "設定ファイルを解析できません。編集中にコンマ、コロン、引用符などの重要な記号を誤って削除したか、設定ファイルが破損している可能性があります。\n\nエラー：{0}",
     "Setting_Dialog_Reset_Title": "設定をリセットする？",
     "Setting_Dialog_Reset_Description": "本当にすべての設定をリセットしてもよろしいですか？\nこのアクションは元に戻せません。",
-    "Setting_Title": "TREM | 設定",
+    "Setting_Title": "TREMV | 設定",
     "Setting_Update_Latest": "最新バージョンです",
     "Webhook_Dialog_Error_Title": "ウェブフックエラー",
     "Webhook_Dialog_Error_Empty": "テストメッセージを送信するには、有効な Webhook URL が必要です。",
@@ -20,8 +20,8 @@
     "Webhook_Dialog_Success": "テストメッセージが正常に送信されました。\nメッセージ ID：{0}\nチャンネル ID：{1}",
     "Tray_Show": "ウィンドウを開く",
     "Tray_Hide": "ウィンドウを隠す",
-    "Tray_Restart": "TREM を再起動",
-    "Tray_Exit": "TREM を強制終了",
+    "Tray_Restart": "TREMV を再起動",
+    "Tray_Exit": "TREMV を強制終了",
     "Dialog_Button_Confirm": "確認",
     "Dialog_Button_Cancel": "キャンセル",
     "Dialog_Button_OK": "OK",
@@ -38,7 +38,7 @@
     "Intensity_Six_Weak": "６弱",
     "Intensity_Six_Strong": "６強",
     "Intensity_Seven": "７級",
-    "Report_Title_Local": "TREM 手動ポジショニング",
+    "Report_Title_Local": "TREMV 手動ポジショニング",
     "Report_Title_Small": "有感の小規模地震",
     "Report_Intensity_Title": "最大震度",
     "Setting": "設定",
