--- a/TREM.Electron/Localization/dict/kr.json
+++ b/TREM.Electron/Localization/dict/kr.json
@@ -1,7 +1,7 @@
 {
     "Application_Connecting": "서버와 연결중...",
     "Application_Loading": "데이터 로딩중...",
-    "Application_Title": "TREM 대만 실시간 지진 모니터링",
+    "Application_Title": "TREMV 대만 실시간 지진 모니터링",
     "Application_Welcome": "환영합니다",
     "Audio_Test": "소리 테스트",
     "Audio_TestStop": "정지",
@@ -11,7 +11,7 @@
     "Setting_Dialog_Error_Description": "설정 파일을 해석하지 못했습니다. 편집 중에 중요한 기호를 잘못 삭제하거나 설정 파일이 파손되었을 수 있습니다.\n\n오류:{0}",
     "Setting_Dialog_Reset_Title": "설정을 초기화할까요?",
     "Setting_Dialog_Reset_Description": "정말 모든 설정이 초기화되도 될까요?\n이 행동은 절대 복구할 수 없어요.",
-    "Setting_Title": "TREM | 설정",
+    "Setting_Title": "TREMV | 설정",
     "Setting_Update_Latest": "업데이트 없음",
     "Webhook_Dialog_Error_Title": "웹훅 오류",
     "Webhook_Dialog_Error_Empty": "테스트 메세지를 보내기 위해서는 유효한 웹훅 URL이 필요합니다.",
@@ -20,8 +20,8 @@
     "Webhook_Dialog_Success": "테스트 메세지가 정상적으로 발송되었습니다.\n메세지 ID:{0}\n채널 ID:{1}",
     "Tray_Show": "창 열기",
     "Tray_Hide": "창 숨김",
-    "Tray_Restart": "TREM 재시작",
-    "Tray_Exit": "TREM 강제 종료",
+    "Tray_Restart": "TREMV 재시작",
+    "Tray_Exit": "TREMV 강제 종료",
     "Dialog_Button_Confirm": "적용",
     "Dialog_Button_Cancel": "취소",
     "Dialog_Button_OK": "OK",
