--- a/TREM.Electron/Localization/dict/ru.json
+++ b/TREM.Electron/Localization/dict/ru.json
@@ -1,7 +1,7 @@
 {
     "Application_Connecting": "Подключение к серверу",
     "Application_Loading": "Загрузка",
-    "Application_Title": "TREM Мониторинг землетрясений на Тайване в режиме реального времени",
+    "Application_Title": "TREMV Мониторинг землетрясений на Тайване в режиме реального времени",
     "Application_Welcome": "Добро пожаловать",
     "Audio_Test": "Тестовый звук",
     "Audio_TestStop": "Остановить",
@@ -11,7 +11,7 @@
     "Setting_Dialog_Error_Description": "Невозможно разобрать файл конфигурации, возможно, вы случайно удалили некоторые важные символы, такие как запятые, двоеточия или кавычки во время редактирования, или файл конфигурации мог быть поврежден.\n\nОшибка: {0}",
     "Setting_Dialog_Reset_Title": "Сбросить настройки?",
     "Setting_Dialog_Reset_Description": "Вы уверены, что действительно хотите сбросить все настройки?\nэто действие необратимо",
-    "Setting_Title": "TREM | Настройки",
+    "Setting_Title": "TREMV | Настройки",
     "Setting_Update_Latest": null,
     "Webhook_Dialog_Error_Title": "Ошибка Webhook",
     "Webhook_Dialog_Error_Empty": "Для отправки тестового сообщения необходим действительный ссылка Webhook",
@@ -20,7 +20,7 @@
     "Webhook_Dialog_Success": "Тестовое сообщение успешно отправлено.\nИдентификатор сообщения：{0}\nИдентификатор канала：{1}",
     "Tray_Show": "Показать окно",
     "Tray_Hide": "Скрыть окно",
-    "Tray_Restart": "Перезапуск TREM",
+    "Tray_Restart": "Перезапуск TREMV",
     "Tray_Exit": "Принудительный выход",
     "Dialog_Button_Confirm": "Подтвердить",
     "Dialog_Button_Cancel": "Отмена",
