--- a/TREM.Electron/Localization/dict/zh-CN.json
+++ b/TREM.Electron/Localization/dict/zh-CN.json
@@ -1,7 +1,7 @@
 {
     "Application_Connecting": "连接中...",
     "Application_Loading": "载入中...",
-    "Application_Title": "TREM 台湾即时地震监测",
+    "Application_Title": "TREMV 台湾即时地震监测变体",
     "Application_Welcome": "欢迎",
     "Audio_Test": "测试音效",
     "Audio_TestStop": "停止测试",
@@ -11,7 +11,7 @@
     "Setting_Dialog_Error_Description": "无法读取设置文件，这可能是因为你在编辑时不小心删除了一些重要的符号，像是逗号、冒号或是引号，或是设置文件损坏。\n\n错误：{0}",
     "Setting_Dialog_Reset_Title": "重置设置？",
     "Setting_Dialog_Reset_Description": "您确定要重置所有的设置吗\n这个操作是无法恢复的",
-    "Setting_Title": "TREM | 设置",
+    "Setting_Title": "TREMV | 设置",
     "Setting_Update_Latest": "目前版本是最新的",
     "Webhook_Dialog_Error_Title": "Webhook 错误",
     "Webhook_Dialog_Error_Empty": "发送测试信息需要有效的 Webhook 链接。",
