--- a/TREM.Electron/Localization/dict/zh-TW.json
+++ b/TREM.Electron/Localization/dict/zh-TW.json
@@ -1,12 +1,12 @@
 {
     "Application_Connecting": "連線中...",
     "Application_Loading": "載入中...",
-    "Application_Title": "TREM 臺灣即時地震監測",
+    "Application_Title": "TREMV 臺灣即時地震監測變體",
     "Application_Welcome": "歡迎",
     "Audio_Test": "測試音效",
     "Audio_TestStop": "停止測試",
     "Initialization_No_Connection_Title": "無網際網路連線",
-    "Initialization_No_Connection_Description": "TREM 需要網際網路連線才能正常運行，請檢查你的網路設定並再試一次。",
+    "Initialization_No_Connection_Description": "TREMV 需要網際網路連線才能正常運行，請檢查你的網路設定並再試一次。",
     "Setting_Dialog_Error_Title": "設定檔錯誤",
     "Setting_Dialog_Error_Description": "無法解析設定檔，這可能是你在編輯時不小心刪掉了一些重要的符號，像是逗號、冒號或引號，或是設定檔損壞。\n\n錯誤：{0}",
     "Setting_Dialog_Reset_Title": "重置設定？",
@@ -15,7 +15,7 @@
     "Setting_Dialog_Real_time_alert_Description": "您確定您真的要顯示測站反應嗎\n這個動作將認定你知曉該功能的問題嚴重性",
     "Setting_Dialog_trem_eq_Notification_Title": "地震檢知通知？",
     "Setting_Dialog_trem_eq_Notification_Description": "您確定您真的要地震檢知通知嗎\n這個動作將認定你知曉該功能的問題嚴重性",
-    "Setting_Title": "TREM | 設定",
+    "Setting_Title": "TREMV | 設定",
     "Setting_Update_Latest": "目前已是最新版",
     "Webhook_Dialog_Error_Title": "Webhook 錯誤",
     "Webhook_Dialog_Error_Empty": "發送測試訊息需要有效的 Webhook 連結。",
