--- a/TREM.Electron/Localization/dict/zh-TW.json
+++ b/TREM.Electron/Localization/dict/zh-TW.json
@@ -47,6 +47,9 @@
     "Report_Intensity_Title": "最大震度",
     "Setting": "設定",
     "Setting_Open": "開啟設定",
+    "RTS_Open": "開啟RTS",
+    "Intensity_Open": "開啟Intensity",
+    "FileWindow_Open": "開啟檔案視窗",
     "general_locale": "顯示語言",
     "check_For_Updates": "檢查更新",
     "open_Devtool_F10": "開發者工具",
