--- a/TREM.Electron/Localization/dict/zh-CN.json
+++ b/TREM.Electron/Localization/dict/zh-CN.json
@@ -43,6 +43,8 @@
     "Report_Intensity_Title": "最大震度",
     "Setting": "设置",
     "Setting_Open": "开启设置",
+    "RTS_Open": "开启RTS",
+    "Intensity_Open": "开启Intensity",
     "general_locale": "显示语言",
     "check_For_Updates": "检查更新",
     "open_Devtool_F10": null,
