--- a/TREM.Electron/Localization/dict/zh-TW.json
+++ b/TREM.Electron/Localization/dict/zh-TW.json
@@ -55,17 +55,19 @@
     "open_Devtool_F10": "開發者工具",
     "Notification_No_Update_Title": "沒有可用的更新",
     "Notification_No_Update_Body": "目前v{0}\n最新v{1}",
-    "exptech_login_Title": "登入",
+    "exptech_login_Title": "登入狀態",
     "exptech_rtw_login_Title": "rtw登入",
     "exptech_login_success": "登入成功",
     "exptech_rtw_login_success": "rtw登入成功",
     "exptech_login_error": "登入失敗",
     "exptech_rtw_login_error": "rtw登入失敗",
-    "exptech_logout_Title": "登出",
+    "exptech_logout_Title": "登出狀態",
     "exptech_rtw_logout_Title": "rtw登出",
     "exptech_logout_success": "登出成功",
     "exptech_rtw_logout_success": "rtw登出成功",
     "exptech_logout_error": "登出失敗",
     "exptech_rtw_logout_error": "rtw登出失敗",
+    "exptech_verify_Title": "驗證狀態",
+    "exptech_verify_error": "驗證失敗請到設定重新登入",
     "Tray_Reload": "重新加載"
 }
